--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -37,6 +37,9 @@
           <h1>Hi, I'm Aniket Patil</h1>
           <p class="lead">Passionate Full Stack Developer | Java • Spring Boot • MySQL • React.js</p>
           <a href="#contact" class="btn btn-primary btn-lg">Get In Touch</a>
+          <a href="./Aniket_Patil_Resume_Java_FullStack.pdf" class="btn btn-outline-light btn-lg ms-3" download>
+            <i class="fas fa-download"></i> Download Resume
+          </a>
         </div>
         <div class="col-lg-6 text-center">
           <div class="hero-image" data-aos="fade-left">
@@ -57,7 +60,6 @@
         <div class="about-text">
           <h3>Full Stack Developer | Java & React</h3>
           <p>I am a passionate Full Stack Developer with hands-on experience in building real-world applications using Java, Spring Boot, MySQL, and React.js. I love designing user-friendly applications and solving complex problems with clean code.</p>
-
           <div class="mt-4">
             <h5>Education:</h5>
             <p><strong>MCA</strong> – KIT`s IMER, Kolhapur (2023 - 2025) – 66.09%<br>
@@ -174,6 +176,6 @@
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
