--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aniket Patil - Portfolio</title>
+  <title>Aniket Patil | Full Stack Developer Portfolio</title>
+<meta name="description" content="Portfolio of Aniket Patil - Full Stack Developer skilled in Java, Spring Boot, React.js, and MySQL. Explore my projects, skills, and resume.">
+<meta name="keywords" content="Aniket Patil, Aniket Patil Portfolio, Java Full Stack Developer, Spring Boot, React.js, MySQL, Web Developer, Software Engineer">
+<meta name="author" content="Aniket Patil">
+
+<!-- Open Graph (for social media previews) -->
+<meta property="og:title" content="Aniket Patil | Portfolio">
+<meta property="og:description" content="Passionate Full Stack Developer skilled in Java, Spring Boot, MySQL, and React.js.">
+<meta property="og:image" content="https://portfolio-inky-six-89.vercel.app/MyImage.jpg">
+<meta property="og:url" content="https://portfolio-inky-six-89.vercel.app">
+<meta name="twitter:card" content="summary_large_image">
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
