--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Portfolio of Aniket Patil - Full Stack Developer skilled in Java, Spring Boot, React.js, and MySQL. Explore my projects, skills, and resume.">
 <meta name="keywords" content="Aniket Patil, Aniket Patil Portfolio, Java Full Stack Developer, Spring Boot, React.js, MySQL, Web Developer, Software Engineer">
 <meta name="author" content="Aniket Patil">
+<meta name="google-site-verification" content="google380330d6316d9683.html" />
 
 <!-- Open Graph (for social media previews) -->
 <meta property="og:title" content="Aniket Patil | Portfolio">
